--- a/media.css
+++ b/media.css
@@ -2,12 +2,11 @@
 {
     .row
     {
-        max-width: 420px;
+        max-width: 100%;
         margin: 10px auto;
     }
     .container
     {
-        max-width: 420px;
         background: #f2f2cd;
     }
 
